--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-st-pages
-pathlib
-warnings
-hashlib
-streamlit_extras
-pandas
-seaborn
-sqlite3
+entrypoints==0.4
+executing==1.2.0
+extra-streamlit-components==0.1.56
+Faker==18.11.2
+favicon==0.7.0
+Markdown==3.4.3
+markdown-it-py==2.2.0
+markdownlit==0.0.7
+MarkupSafe==2.1.2
+matplotlib==3.7.0
+matplotlib-inline==0.1.6
+numpy==1.24.2
+packaging==23.0
+pandas==1.5.3
+pathlib==1.0.1
+pickleshare==0.7.5
+plotly==5.13.1
+seaborn==0.12.2
+st-annotated-text==4.0.0
+st-pages==0.4.1
+stack-data==0.6.2
+streamlit==1.24.0
+streamlit-authenticator==0.2.1
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.61
+streamlit-embedcode==0.1.2
+streamlit-extras==0.2.7
+streamlit-faker==0.0.2
+streamlit-image-coordinates==0.1.5
+streamlit-keyup==0.2.0
+streamlit-lottie==0.0.3
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
