--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,5 @@ streamlit-keyup==0.2.0
 streamlit-lottie==0.0.3
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==1.0.2
+docx2txt==0.8
+textract==1.6.5
